--- a/Front-end_Tiennh21/Lab/Lab02/Bai3.html
+++ b/Front-end_Tiennh21/Lab/Lab02/Bai3.html
@@ -116,12 +116,11 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="card-footer">
-                                Vui lòng nhập thông tin cầu thủ
-                            </div>
                         </form>
                     </div>
-
+                    <div class="card-footer">
+                        Vui lòng nhập thông tin cầu thủ
+                    </div>
                 </div>
 
 
@@ -132,7 +131,7 @@
                     <div class="card-header">
                         <i class="fa fa-list" aria-hidden="true"></i> Bảng lương tháng 1
                     </div>
-                    <table class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered table-responsive mb-0">
                         <thead class="table-warning">
                             <tr>
                                 <th rowspan="2" class="align-middle">Mã NV</th>
