--- a/Front-end_Tiennh21/Lab/Lab02/Bai4.html
+++ b/Front-end_Tiennh21/Lab/Lab02/Bai4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>bai3_ducnvph14435</title>
+    <title>bai4_ducnvph14435</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -107,7 +107,7 @@
                             Lưu
                         </button>
 
-                        <button class="btn btn-danger">
+                        <button class="btn btn-danger " data-bs-dismiss="modal">
                             <i class="fa fa-ban" aria-hidden="true"></i>
                             Huỷ
                         </button>
