--- a/Front-end_Tiennh21/Lab/Lab02/Bai1.html
+++ b/Front-end_Tiennh21/Lab/Lab02/Bai1.html
@@ -21,7 +21,8 @@
             <div class="card-header">
                 <i class="fa fa-list" aria-hidden="true"></i> Bảng lương tháng 1
             </div>
-            <table class="table table-striped table-bordered">
+
+            <table class="table table-striped table-bordered table-responsive mb-0">
                 <thead class="table-warning">
                     <tr>
                         <th rowspan="2" class="align-middle">Mã NV</th>
