--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -26,6 +26,7 @@
     <div class="container-fluid">
         <div ng-include="'layout/Navbar.html'"></div>
         <div ng-view></div>
+        <!-- <div ng-include="'layout/ListQuestion.html'"></div> -->
         <!-- <div ng-include = "'layout/HomePage.html'"></div> -->
         <!-- <div ng-include = "'layout/About.html'"></div> -->
         <!-- <div ng-include = "'layout/Contact.html'"></div> -->
