--- a/Front-end_Tiennh21/ClassView/Lesson5/demo_sp22.html
+++ b/Front-end_Tiennh21/ClassView/Lesson5/demo_sp22.html
@@ -20,6 +20,7 @@
         {{msParent}}
         <div ng-controller="my_controller1">
             <p>{{ms1}}</p>
+            <p>{{$parent.msParent}}</p>
         </div>
         <div ng-controller="my_controller2">
             <p>{{ms2}}</p>
