--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -13,6 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/Register.css">
     <link rel="stylesheet" href="css/About.css">
     <!-- <link rel="stylesheet" href="css/mdb.css">
@@ -26,7 +27,7 @@
     <div class="container-fluid">
         <div ng-include="'layout/Navbar.html'"></div>
         <div ng-view></div>
-        
+
         <!-- <div ng-include="'layout/ListQuestion.html'"></div> -->
         <!-- <div ng-include = "'layout/HomePage.html'"></div> -->
         <!-- <div ng-include = "'layout/About.html'"></div> -->
@@ -46,6 +47,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+
+    <script src="app/loginCtr.js"></script>
 </body>
 
 </html>
