--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -49,6 +49,8 @@
         crossorigin="anonymous"></script>
 
     <script src="app/loginCtr.js"></script>
+    <script src="app/RegisCtrl.js"></script>
+    <script src="app/forgotPassword.js"></script>
 </body>
 
 </html>
