--- a/Front-end_Tiennh21/Lab/Lab04/bai4.html
+++ b/Front-end_Tiennh21/Lab/Lab04/bai4.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
+    <style>
+
+    </style>
   </head>
   <body ng-app="myapp">
 
@@ -31,7 +34,7 @@
 
                     <div class="form-group">
                         <label for="">Diện tích</label>
-                        <div ng-bind = "dt" class="form-control">
+                        <div  class="form-control" ng-bind = "dt">
                         </div>
                     </div>
 
