--- a/Front-end_Tiennh21/ClassView/Lesson7/bai3.html
+++ b/Front-end_Tiennh21/ClassView/Lesson7/bai3.html
@@ -21,20 +21,20 @@
                 <form name="myForm">
                     <div class="form-group">
                         <label for="">Ho Ten</label>
-                        <input ng-model="student.fullname" name="fullname" type="" class="form-control" minlength="5"
+                        <input ng-model="student.ten" name="ten" type="" class="form-control" minlength="5"
                             required>
-                        <div ng-hide="myForm.fullname.$untouched ||myForm.fullname.$valid">
-                            <small ng-show="myForm.fullname.$error.required" class="text-danger fst-italic">
+                        <div ng-hide="myForm.ten.$untouched ||myForm.ten.$valid">
+                            <small ng-show="myForm.ten.$error.required" class="text-danger fst-italic">
                                 Fullname không để trống
                             </small>
-                            <small ng-show="myForm.fullname.$error.minlength" class="text-danger fst-italic">
+                            <small ng-show="myForm.ten.$error.minlength" class="text-danger fst-italic">
                                 Fullname không dưới 5 ký tự
                             </small>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="">Ngay Sinh</label>
-                        <input ng-model="student.birthday" name="birthday" type="text" class="form-control"
+                        <!-- <label for="">Ngay Sinh</label> -->
+                        <!-- <input ng-model="student.birthday" name="birthday" type="text" class="form-control"
                             id="exampleFormControlInput1" placeholder="Ngày sinh (yyyy-mm-dd)"
                             pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" required>
 
@@ -45,20 +45,43 @@
                             <small ng-show="myForm.birthday.$error.pattern" class="fst-italic text-danger">Không
                                 đúng
                                 định dạng ngày sinh</small>
-                        </div>
+                        </div> -->
 
                     </div>
-                    <div class="form-group">
-                        <label for="">Điểm</label>
-                        <input ng-model="student.mark" type="" class="form-control">
 
-                        <div ng-hide="myForm.mark.$untouched ||myForm.mark.$valid">
-                            <small ng-show="myForm.mark.$error.required" class="text-danger fst-italic">
+                    <div class="form-group">
+                        <label for="">Masv</label>
+                        <input ng-model="student.Masv" name="Masv" type="" class="form-control" minlength="5"
+                            required>
+                        <div ng-hide="myForm.Masv.$untouched ||myForm.Masv.$valid">
+                            <small ng-show="myForm.Masv.$error.required" class="text-danger fst-italic">
+                                Fullname không để trống
+                            </small>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="">Chuyen nganh</label>
+                        <input ng-model="student.chuyen_nganh" name="chuyen_nganh" type="" class="form-control" minlength="5"
+                            required>
+                        <div ng-hide="myForm.chuyen_nganh.$untouched ||myForm.chuyen_nganh.$valid">
+                            <small ng-show="myForm.chuyen_nganh.$error.required" class="text-danger fst-italic">
+                                Fullname không để trống
+                            </small>
+                        </div>
+                    </div>
+
+                    <!-- <div class="form-group">
+                        <label for="">Điểm</label>
+                        <input ng-model="student.chuyen_nganh" class="form-control">
+
+                        <div ng-hide="myForm.chuyen_nganh.$untouched ||myForm.chuyen_nganh.$valid">
+                            <small ng-show="myForm.chuyen_nganh.$error.required" class="text-danger fst-italic">
                                 mark không để trống
                             </small>
 
                         </div>
-                    </div>
+                    </div> -->
                     <div class="form-group mt-4">
                         <button type="button" class="btn btn-primary" ng-click="insert()">
                             Thêm</button>
@@ -79,32 +102,32 @@
                         <th>ID</th>
                         <th>Họ và Tên</th>
                         <th>Msv</th>
+                        <th>GioiTinh</th>
                         <th>Chuyeen nganh</th>
                         <th>Thao tac</th>
-                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="item in dssv">
                         <td>{{item.id}}</td>
                         <td>{{item.ten}}</td>
+                        <td>{{item.Masv}}</td>
                         <td>{{item.gioi_tinh}}</td>
                         <td>{{item.chuyen_nganh}}</td>
-                        <td colspan = "2"></td>
-                        <td>
+                        <!-- <td>
                             <span ng-if="item.mark < 5"> yếu</span>
                             <span ng-if="item.mark >= 5 && item.mark < 8"> trung bình</span>
                             <span ng-if="item.mark >= 8"> Giỏi</span>
-                        </td>
+                        </td> -->
                         <td>
-                            <button class="btn btn-primary">Sửa</button>
-                            <button class="btn btn-danger">Xóa</button>
+                            <a href="#" ng-click="edit($index)" style="text-decoration: none">
+                                Sửa
+                            </a>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
-
     </div>
 
     <script>
@@ -117,7 +140,6 @@
             $http.get(url).then(response => {
                 console.log(response)
                 $scope.dssv = response.data;
-
             })
         }
         function myCtrl($scope) {
@@ -157,6 +179,7 @@
             $scope.edit = function (index) {
                 $scope.index = index;
                 $scope.student = angular.copy($scope.students[index]);
+                console.log(index)
             }
         }
 
