--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="css/mdb.min.css"> -->
     <script src="app/Controller.js"></script>
     <script src="db/Subjects.js"></script>
-    <script src="app/indexCtrl.js"></script>
 </head>
 
 <body ng-app="myApp">
@@ -51,6 +50,11 @@
     <script src="app/loginCtr.js"></script>
     <script src="app/RegisCtrl.js"></script>
     <script src="app/forgotPassword.js"></script>
+    <script src="app/updateProfile.js"></script> 
+    <script src="app/changPassCtrl.js"></script>
+    <script src="app/indexCtrl.js"></script>
+    <script src="app/informationExamCtrl.js"></script>
+    <script src="app/testQuestionsCtr.js"></script>
 </body>
 
 </html>
