--- a/Front-end_Tiennh21/Assignment/layout.html
+++ b/Front-end_Tiennh21/Assignment/layout.html
@@ -27,16 +27,16 @@
         <div ng-include="'layout/Navbar.html'"></div>
         <div ng-view></div>
 
-        <!-- <div ng-include="'layout/ListQuestion.html'"></div> -->
-        <!-- <div ng-include = "'layout/HomePage.html'"></div> -->
-        <!-- <div ng-include = "'layout/About.html'"></div> -->
-        <!-- <div ng-include = "'layout/Contact.html'"></div> -->
-        <!-- <div ng-include="'layout/Feedback_Home.html'"></div> -->
-        <!-- <div ng-include="'layout/FAQ.html'"></div> -->
-        <!-- <div ng-include="'layout/ListTest.html'"></div> -->
-        <!-- <div ng-include="'layout/Profile.html'"></div> -->
-        <!-- <div ng-include="'layout/ChangePassword.html'"></div> -->
-        <!-- <div ng-include="'layout/ForgotPassword.html'"></div> -->
+        <!-- <div ng-include="'layout/ListQuestion.html'"></div>
+        <div ng-include = "'layout/HomePage.html'"></div>
+        <div ng-include = "'layout/About.html'"></div>
+        <div ng-include = "'layout/Contact.html'"></div>
+        <div ng-include="'layout/Feedback_Home.html'"></div>
+        <div ng-include="'layout/FAQ.html'"></div>
+        <div ng-include="'layout/ListTest.html'"></div>
+        <div ng-include="'layout/Profile.html'"></div>
+        <div ng-include="'layout/ChangePassword.html'"></div>
+        <div ng-include="'layout/ForgotPassword.html'"></div> -->
     </div>
     <script src="js/angular-route.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
